fixed wrong position arg

--- a/website/style.css
+++ b/website/style.css
@@ -18,7 +18,7 @@ div#text {
 }
 
 div#icons {
-    position: fixed;
+    position: absolute;
     bottom: 2.5%;
     left: 50%;
 }
